--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -31,7 +31,7 @@
       <mat-card-content>
         <verify-action-button
           #submitButton
-          [action]="submit"
+          [action]="submit || 'testing'"
           [alwaysShow]="true"
           [canSubmit]="formGroup.valid"
           [canSubmitDisabledReason]="'Form is invalid'"
