--- a/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
@@ -1,34 +1,35 @@
 <mat-card>
   <mat-card-content>
     <h2>
-        Apollo Gift History
-        <error-spinner
-          [isActive]="showSpinner"
-          [error]="loadError"
-          spinnerMessage="Loading"
-          errorMessage="Failed to load"
-        ></error-spinner>
-      </h2>
-      <ng-container *ngIf="isLoaded && !loadError; else failstate">
-        <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              {{history.requestingAgent}} {{history.giftSendDateUtc?.toGMTString()}}
-            </mat-panel-title>
-            <mat-panel-description>
-              Inventory Summary goes here.
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <div *ngIf="history.giftInventory.credits">
-            <h3>Credits: {{history.giftInventory.credits}}</h3>
-          </div>
-          <ng-container *ngIf="history.giftInventory.cars">
-            <h3>Cars: {{history.giftInventory.cars.length}}</h3>
-            <p *ngFor="let car of history.giftInventory.cars">
-              {{car.quantity}} {{car.description}} [{{car.itemId}}]
-            </p>
-          </ng-container>
-        </mat-expansion-panel>
-      </ng-container>
+      Apollo Gift History
+    </h2>
+    <ng-container *ngIf="!isLoading && !loadError; else failState">
+      <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList$ | async">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{history.requestingAgent}} {{history.giftSendDateUtc?.toGMTString()}}
+          </mat-panel-title>
+          <mat-panel-description>
+            Inventory Summary goes here.
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div *ngIf="history.giftInventory.credits">
+          <h3>Credits: {{history.giftInventory.credits}}</h3>
+        </div>
+        <ng-container *ngIf="history.giftInventory.cars">
+          <h3>Cars: {{history.giftInventory.cars.length}}</h3>
+          <p *ngFor="let car of history.giftInventory.cars">
+            {{car.quantity}} {{car.description}} [{{car.itemId}}]
+          </p>
+        </ng-container>
+      </mat-expansion-panel>
+    </ng-container>
   </mat-card-content>
 </mat-card>
+<ng-template #failState>
+  <p>HELLO WORLD!!!</p>
+  <div id="fail-state">
+    <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
+    <json-dump *ngIf="loadError" [input]="loadError">Failed to load.</json-dump>
+  </div>
+</ng-template>
