--- a/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
@@ -4,7 +4,7 @@
       Apollo Gift History
     </h2>
     <ng-container *ngIf="!isLoading && !loadError; else failState">
-      <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList$ | async">
+      <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
         <mat-expansion-panel-header>
           <mat-panel-title>
             {{history.requestingAgent}} {{history.giftSendDateUtc?.toGMTString()}}
@@ -26,8 +26,8 @@
     </ng-container>
   </mat-card-content>
 </mat-card>
+
 <ng-template #failState>
-  <p>HELLO WORLD!!!</p>
   <div id="fail-state">
     <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
     <json-dump *ngIf="loadError" [input]="loadError">Failed to load.</json-dump>
