--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -1,24 +1,26 @@
-<ng-container [formGroup]="formGroup" (ngSubmit)="submit()">
-  <apollo-player-selection
-    #playerSelection
-    [allowT10Id]="false"
-    [allowGroup]="false"
-    [formControl]="formControls.playerIdentities"
-  >
-    <player-selection-chip-list
-      [playerSelection]="playerSelection"
-      [identities]="playerSelection.playerIdentitiesFull"
+<ng-container [formGroup]="formGroup">
+  <div class="left">
+    <apollo-player-selection
+      #playerSelection
+      [allowT10Id]="false"
+      [allowGroup]="false"
+      [formControl]="formControls.playerIdentities"
     >
-      <ng-template let-identity>
-        <player-selection-chip [playerSelection]="playerSelection" [identity]="identity">
-          <ban-chip-icon
-            [identity]="identity"
-            [banSummary]="summaryLookup[identity.xuid]"
-          ></ban-chip-icon>
-        </player-selection-chip>
-      </ng-template>
-    </player-selection-chip-list>
-  </apollo-player-selection>
+      <player-selection-chip-list
+        [playerSelection]="playerSelection"
+        [identities]="playerSelection.playerIdentitiesFull"
+      >
+        <ng-template let-identity>
+          <player-selection-chip [playerSelection]="playerSelection" [identity]="identity">
+            <ban-chip-icon
+              [identity]="identity"
+              [banSummary]="summaryLookup[identity.xuid]"
+            ></ban-chip-icon>
+          </player-selection-chip>
+        </ng-template>
+      </player-selection-chip-list>
+    </apollo-player-selection>
+  </div>
 
   <div class="action-container">
     <mat-card>
