use function to check is gift basket is ready

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -117,7 +117,7 @@
               class="send-gift-basket"
               color="primary"
               type="submit"
-              [disabled]="!sendGiftForm.valid || !isGiftBasketReady"
+              [disabled]="!isGiftBasketReady()"
             >
               Send Gift
               <span *ngIf="usingPlayerIdentities">To Player(s)</span>
