Added spec tests for new functionality

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -31,7 +31,7 @@
     <sunrise-gift-basket
       [playerIdentities]="selectedPlayerIdentities"
       [lspGroup]="selectedLspGroup"
-      [usingPlayerIdentities]="matTabSelectedIndex === 0"
+      [usingPlayerIdentities]="isUsingPlayerIdentities()"
     ></sunrise-gift-basket>
   </div>
 </div>
