gravity gift history page working.

--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
@@ -13,6 +13,7 @@
       <!-- Page tool -->
       <gravity-gift-history-results
         [selectedPlayer]="selectedPlayer"
+        [usingPlayerIdentities]="matTabSelectedIndex == 0"
       ></gravity-gift-history-results>
     </div>
   </div>
