--- a/StewardClient/src/app/shared/views/gift-history-results/titles/gravity/gravity-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/gravity/gravity-gift-history-results.component.html
@@ -4,7 +4,7 @@
         Gravity Gift History
     </h2>
     <ng-container *ngIf="!isLoading && !loadError; else failState">
-      <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList$ | async">
+      <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
         <mat-expansion-panel-header>
           <mat-panel-title>
             {{history.requestingAgent}} {{history.giftSendDateUtc?.toGMTString()}}
