use correct comparison operator, removed title specific css files for a base css file. Updated Apollo expanded view UI, will make similar UI changes for Sunrise and Gravity.

--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
@@ -30,7 +30,7 @@
     <apollo-gift-history-results
       [selectedPlayer]="selectedPlayer"
       [selectedGroup]="selectedLspGroup"
-      [usingPlayerIdentities]="matTabSelectedIndex == 0"
+      [usingPlayerIdentities]="matTabSelectedIndex === 0"
     ></apollo-gift-history-results>
   </div>
 </div>
