--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
@@ -30,7 +30,7 @@
       <sunrise-gift-history-results
         [selectedPlayer]="selectedPlayer"
         [selectedGroup]="selectedLspGroup"
-        [usingPlayerIdentities]="matTabSelectedIndex == 0"
+        [usingPlayerIdentities]="matTabSelectedIndex === 0"
       ></sunrise-gift-history-results>
     </div>
   </div>
