cleanup imports get apollo preview working.

--- a/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
+++ b/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
@@ -8,3 +8,18 @@ h3 {
 p {
     margin-bottom: 0;
 }
+
+mat-panel-description {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.inventoryPreview {
+    > .label{
+        font-weight: bold;
+        margin-right: 1em;
+    }
+    > .data{
+        margin-right: 2em;
+    }
+}
