--- a/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
+++ b/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
@@ -17,9 +17,14 @@ mat-panel-description {
 .inventoryPreview {
     > .label{
         font-weight: bold;
-        margin-right: 1em;
+        margin-right: .5em;
     }
     > .data{
-        margin-right: 2em;
+        margin-right: 1em;
     }
+}
+
+.scrollable {
+    height: 500px;
+    overflow: auto;
 }
