--- a/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
@@ -3,17 +3,15 @@
     <h2>
       Apollo Gift History
     </h2>
-    <ng-container *ngIf="!isLoading && !loadError; else failState">
+    <div class="scrollable" *ngIf="!isLoading && !loadError; else failState">
       <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
         <mat-expansion-panel-header>
           <mat-panel-title>
             [{{history.requestingAgent}}] {{history.giftSendDateUtc?.toGMTString()}}
           </mat-panel-title>
           <mat-panel-description>
-
             <span class="inventoryPreview" *ngIf="history.giftInventory?.credits > 0"><span class="label">Credits</span><span class="data">{{history.giftInventory.credits}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory?.cars.length > 0"><span class="label">Cars</span><span class="data">{{history.giftInventory.cars.length}}</span></span>
-
           </mat-panel-description>
         </mat-expansion-panel-header>
         <div *ngIf="history.giftInventory.credits">
@@ -26,7 +24,7 @@
           </p>
         </div>
       </mat-expansion-panel>
-    </ng-container>
+    </div>
   </mat-card-content>
 </mat-card>
 
