--- a/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
@@ -3,21 +3,23 @@
     <h2>
         Sunrise Gift History
     </h2>
-    <ng-container *ngIf="!isLoading && !loadError; else failState">
+    <div class="scrollable" *ngIf="!isLoading && !loadError; else failState">
       <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
         <mat-expansion-panel-header>
           <mat-panel-title>
             {{history.requestingAgent}} {{history.giftSendDateUtc?.toGMTString()}}
           </mat-panel-title>
           <mat-panel-description>
-
-            
+            <span class="inventoryPreview" *ngIf="history.giftInventory?.credits > 0"><span class="label">Credits</span><span class="data">{{history.giftInventory.credits}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory?.wheelSpins > 0"><span class="label">Wheel Spins</span><span class="data">{{history.giftInventory.wheelSpins}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory?.superWheelSpins > 0"><span class="label">Super Wheel Spins</span><span class="data">{{history.giftInventory.superWheelSpins}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory?.skillPoints > 0"><span class="label">Skill Points</span><span class="data">{{history.giftInventory.skillPoints}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory?.forzathonPoints > 0"><span class="label">Forzathon Points</span><span class="data">{{history.giftInventory.forzathonPoints}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory.cars?.length > 0"><span class="label">Cars</span><span class="data">{{history.giftInventory.cars.length}}</span></span>
-            <span class="inventoryPreview" *ngIf="history.giftInventory.energyRefills?.length > 0"><span class="label">Energy Refills</span><span class="data">{{history.giftInventory.energyRefills.length}}</span></span>
-            <span class="inventoryPreview" *ngIf="history.giftInventory.masteryKits?.length > 0"><span class="label">Mastery Kits</span><span class="data">{{history.giftInventory.masteryKits.length}}</span></span>
-            <span class="inventoryPreview" *ngIf="history.giftInventory.repairKits?.length > 0"><span class="label">Repair Kits</span><span class="data">{{history.giftInventory.repairKits.length}}</span></span>
-            <span class="inventoryPreview" *ngIf="history.giftInventory.upgradeKits?.length > 0"><span class="label">Upgrade Kits</span><span class="data">{{history.giftInventory.upgradeKits.length}}</span></span>
-
+            <span class="inventoryPreview" *ngIf="history.giftInventory.carHorns?.length > 0"><span class="label">Car Horns</span><span class="data">{{history.giftInventory.carHorns.length}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory.emotes?.length > 0"><span class="label">Emotes</span><span class="data">{{history.giftInventory.emotes.length}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory.quickChatLines?.length > 0"><span class="label">Chat Lines</span><span class="data">{{history.giftInventory.quickChatLines.length}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory.vanityItems?.length > 0"><span class="label">Vanity Items</span><span class="data">{{history.giftInventory.vanityItems.length}}</span></span>
           </mat-panel-description>
         </mat-expansion-panel-header>
         <div *ngIf="history.giftInventory.credits">
@@ -66,7 +68,7 @@
           </p>
         </div>
       </mat-expansion-panel>
-    </ng-container>
+    </div>
   </mat-card-content>
 </mat-card>
 <ng-template #failState>
