switched up appearance of panel title to put date and requesting agent on seperate lines.
Some changes to panel-description to better display summary of lost item inventory.

--- a/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
+++ b/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
@@ -10,17 +10,19 @@ p {
 }
 
 mat-panel-description {
-    display: flex;
-    flex-flow: row nowrap;
+    display: block;
+    flex-flow: row;
 }
 
 .inventoryPreview {
+    color: grey;
     > .label{
         font-weight: bold;
         margin-right: .5em;
+        white-space: pre;
     }
     > .data{
-        margin-right: 1em;
+        margin-right: .5em;
     }
 }
 
