--- a/StewardClient/src/app/shared/views/gift-history-results/titles/gravity/gravity-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/gravity/gravity-gift-history-results.component.html
@@ -7,10 +7,11 @@
       <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
         <mat-expansion-panel-header>
           <mat-panel-title>
-            {{history.requestingAgent}} {{history.giftSendDateUtc?.toGMTString()}}
+            {{history.requestingAgent}} <br />
+            {{history.giftSendDateUtc?.toGMTString()}}
           </mat-panel-title>
           <mat-panel-description>            
-            <span class="inventoryPreview" *ngIf="history.giftInventory.currencies?.length > 0"><span class="label">Currencies</span><span class="data">{{history.giftInventory.credits}}</span></span>
+            <span class="inventoryPreview" *ngIf="history.giftInventory.currencies?.length > 0"><span class="label">Currencies</span><span class="data">{{history.giftInventory.currencies.length}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory.cars?.length > 0"><span class="label">Cars</span><span class="data">{{history.giftInventory.cars.length}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory.energyRefills?.length > 0"><span class="label">Energy Refills</span><span class="data">{{history.giftInventory.energyRefills.length}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory.masteryKits?.length > 0"><span class="label">Mastery Kits</span><span class="data">{{history.giftInventory.masteryKits.length}}</span></span>
@@ -20,38 +21,38 @@
         </mat-expansion-panel-header>
         <div *ngIf="history.giftInventory.cars">
           <h3>Cars: {{history.giftInventory.cars.length}}</h3>
-          <p *ngFor="let car of history.giftInventory.cars">
+          <p *ngFor="let car of history.giftInventory?.cars">
             [{{car.quantity}}] {{car.description}} (Item ID: {{car.itemId}})
           </p>
         </div>
-        <div *ngIf="history.giftInventory.currencies">
-          <h3>Currencies: {{history.giftInventory.currencies.length}}</h3>
-          <p *ngFor="let currency of history.giftInventory.currencies">
+        <div *ngIf="history.giftInventory?.currencies">
+          <h3>Currencies: {{history.giftInventory.currencies?.length}}</h3>
+          <p *ngFor="let currency of history.giftInventory?.currencies">
             [{{currency.quantity}}] {{currency.description}} (Item ID: {{currency.itemId}})
           </p>
         </div>
-        <div *ngIf="history.giftInventory.energyRefills">
-          <h3>Energy Refills: {{history.giftInventory.energyRefills.length}}</h3>
-          <p *ngFor="let energyRefill of history.energyRefills.currencies">
+        <div *ngIf="history.giftInventory?.energyRefills">
+          <h3>Energy Refills: {{history.giftInventory.energyRefills?.length}}</h3>
+          <p *ngFor="let energyRefill of history.giftInventory?.energyRefills">
             [{{energyRefill.quantity}}] {{energyRefill.description}} (Item ID: {{energyRefill.itemId}})
           </p>
         </div>
-        <div *ngIf="history.giftInventory.masteryKits">
-          <h3>Mastery Kits: {{history.giftInventory.masteryKits.length}}</h3>
-          <p *ngFor="let masteryKit of history.giftInventory.masteryKits">
+        <div *ngIf="history.giftInventory?.masteryKits">
+          <h3>Mastery Kits: {{history.giftInventory.masteryKits?.length}}</h3>
+          <p *ngFor="let masteryKit of history.giftInventory?.masteryKits">
             [{{masteryKit.quantity}}] {{masteryKit.description}} (Item ID: {{masteryKit.itemId}})
           </p>
         </div>
-        <div *ngIf="history.giftInventory.repairKits">
-          <h3>Repair Kits: {{history.giftInventory.repairKits.length}}</h3>
-          <p *ngFor="let repairKit of history.giftInventory.repairKits">
+        <div *ngIf="history.giftInventory?.repairKits">
+          <h3>Repair Kits: {{history.giftInventory.repairKits?.length}}</h3>
+          <p *ngFor="let repairKit of history.giftInventory?.repairKits">
             [{{repairKit.quantity}}] {{repairKit.description}} (Item ID: {{repairKit.itemId}})
           </p>
         </div>
-        <div *ngIf="history.giftInventory.upgradeKits">
-          <h3>Upgrade Kits: {{history.giftInventory.upgradeKits.length}}</h3>
-          <p *ngFor="let upgradeKit of history.giftInventory.upgradeKits">
-            [{{upgradeKit.quantity}}] {{upgradeKit.description}} Item ID: {{upgradeKit.itemId}})
+        <div *ngIf="history.giftInventory?.upgradeKits">
+          <h3>Upgrade Kits: {{history.giftInventory.upgradeKits?.length}}</h3>
+          <p *ngFor="let upgradeKit of history.giftInventory?.upgradeKits">
+            [{{upgradeKit.quantity}}] {{upgradeKit.description}} (Item ID: {{upgradeKit.itemId}})
           </p>
         </div>
       </mat-expansion-panel>
