--- a/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
@@ -5,18 +5,17 @@
     </h2>
     <div class="scrollable" *ngIf="!isLoading && !loadError; else failState">
       <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
-        <mat-expansion-panel-header height="auto">
+        <mat-expansion-panel-header>
           <mat-panel-title>
-            {{history.requestingAgent}} <br />
+            {{history.requestingAgent}}
             {{history.giftSendDateUtc?.toGMTString()}}
           </mat-panel-title>
-          <mat-panel-description height="auto">
+          <mat-panel-description>
             <span class="inventoryPreview" *ngIf="history.giftInventory?.credits > 0"><span class="label">Credits</span><span class="data">{{history.giftInventory.credits}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory?.wheelSpins > 0"><span class="label">Wheel Spins</span><span class="data">{{history.giftInventory.wheelSpins}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory?.superWheelSpins > 0"><span class="label">Super Wheel Spins</span><span class="data">{{history.giftInventory.superWheelSpins}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory?.skillPoints > 0"><span class="label">Skill Points</span><span class="data">{{history.giftInventory.skillPoints}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory?.forzathonPoints > 0"><span class="label">Forzathon Points</span><span class="data">{{history.giftInventory.forzathonPoints}}</span></span>
-            <br />
             <span class="inventoryPreview" *ngIf="history.giftInventory.cars?.length > 0"><span class="label">Cars</span><span class="data">{{history.giftInventory.cars.length}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory.carHorns?.length > 0"><span class="label">Car Horns</span><span class="data">{{history.giftInventory.carHorns.length}}</span></span>
             <span class="inventoryPreview" *ngIf="history.giftInventory.emotes?.length > 0"><span class="label">Emotes</span><span class="data">{{history.giftInventory.emotes.length}}</span></span>
