--- a/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
+++ b/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
@@ -9,23 +9,30 @@ p {
     margin-bottom: 0;
 }
 
+mat-expansion-panel-header {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
 mat-panel-title {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     display: inline;
+    &, & > * {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+
+    flex-basis: auto;
 }
 
 mat-panel-description {
     overflow: hidden;
-    white-space: nowrap;
     text-overflow: ellipsis;
-    display: inline;
-}
-
-mat-expansion-panel-header {
-    padding-left: 12px;
-    padding-right: 12px;
+    // white-space: nowrap;
+    // display: inline;
+    display: flex;
+    flex-flow: row wrap;
+    max-height: 2.5em;
 }
 
 .inventoryPreview {
@@ -33,7 +40,7 @@ mat-expansion-panel-header {
     > .label{
         font-weight: bold;
         margin-right: .5em;
-        white-space: pre;
+        white-space: nowrap;
     }
     > .data{
         margin-right: .5em;
