Pair programming with David. He helped me figure out some date formatting, helped get some helpful extensions set up in my VScode, and those pointed out that we didn't have requestingAgent defined in the gift history models across titles.

--- a/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
+++ b/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
@@ -9,11 +9,6 @@ p {
     margin-bottom: 0;
 }
 
-mat-expansion-panel-header {
-    padding-left: 12px;
-    padding-right: 12px;
-}
-
 mat-panel-title {
     display: inline;
     &, & > * {
@@ -22,14 +17,12 @@ mat-panel-title {
         text-overflow: ellipsis;
     }
 
-    flex-basis: auto;
+    flex-basis: auto; // Probably delte/
 }
 
 mat-panel-description {
     overflow: hidden;
     text-overflow: ellipsis;
-    // white-space: nowrap;
-    // display: inline;
     display: flex;
     flex-flow: row wrap;
     max-height: 2.5em;
@@ -48,6 +41,6 @@ mat-panel-description {
 }
 
 .scrollable {
-    height: 500px;
+    max-height: 80vh;
     overflow: auto;
 }
