--- a/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
@@ -8,7 +8,7 @@
         <mat-expansion-panel-header>
           <mat-panel-title>
             <div>{{history.requestingAgent}}</div>
-            <div [matTooltip]="history.giftSendDateUtc?.toGMTString()">{{history.giftSendDateUtc?.toGMTString()}}</div>
+            <div [matTooltip]="history.giftSendDateUtc | date : 'long'">{{history.giftSendDateUtc| date : 'short'}}</div>
           </mat-panel-title>
           <mat-panel-description>
             <span class="inventoryPreview" *ngIf="history.giftInventory?.credits > 0"><span class="label">Credits</span><span class="data">{{history.giftInventory.credits}}</span></span>
