--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-chips/ban-chips.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-chips/ban-chips.component.html
@@ -7,6 +7,7 @@
       {{ identity[playerSelection?.playerIdType] || 'mystery' }}
     </span>
     <fa-icon
+      aria-role="button"
       class="remove-player-icon"
       [icon]="closeIcon"
       matTooltip="Remove player from list"
