--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -1,4 +1,4 @@
-<ng-container [formGroup]="formGroup">
+<form [formGroup]="formGroup">
   <div class="left">
     <sunrise-player-selection
       #playerSelection
@@ -53,4 +53,4 @@
       </mat-card-content>
     </mat-card>
   </div>
-</ng-container>
+</form>
