all tests passing with full coverage

--- a/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
+++ b/StewardClient/src/app/shared/views/gift-history-results/gift-history-results.base.component.scss
@@ -17,7 +17,8 @@ mat-panel-title {
         text-overflow: ellipsis;
     }
 
-    flex-basis: auto; // Probably delte/
+    min-width: 150px;
+    flex-basis: auto;
 }
 
 mat-panel-description {
